added footer with link to About

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -385,3 +385,9 @@ ul.dropdown-menu{
 }
 
 .lt-ie9 .search input { line-height: 26px }
+
+.footer-nav {
+  display: inline; 
+  padding-right: 10px; 
+  padding-left: 10px; 
+}
