adds rating functionality

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -190,26 +190,26 @@ a {
 }
 
 /* Five Star rating button */
-.rating {
-  unicode-bidi: bidi-override;
-  direction: rtl;
-  float: left;
-}
-.rating > span {
-  display: inline-block;
-  position: relative;
-  width: 1.1em;
-}
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-   content: "\2605";
-   position: absolute;
-   cursor: pointer;
-}
+// .rating {
+//   unicode-bidi: bidi-override;
+//   direction: rtl;
+//   float: left;
+// }
+// .rating > span {
+//   display: inline-block;
+//   position: relative;
+//   width: 1.1em;
+// }
+// .rating > span:hover:before,
+// .rating > span:hover ~ span:before {
+//    content: "\2605";
+//    position: absolute;
+//    cursor: pointer;
+// }
 
-.btn-rate {
-  margin:10px 0 0 20px;
-}
+// .btn-rate {
+//   margin:10px 0 0 20px;
+// }
 /* End Five Star rating button */
 
 #reviews-box {
