--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 			<div class="col-md-4">
 				<div class="avatar-wrapper text-center">
 					<%= image_tag @user.avatar.url(:medium), class: "avatar-img", style: "max-width: 300px;" %>
+					<%= link_to "MESSAGE", user_path(@user),class: "btn btn-primary" %>
 				</div>
 			</div>
 			<div class="col-md-8 well">
@@ -13,9 +14,32 @@
 				<p>Bio: <%= @user.bio %></p>
 				<p>Workshoply member since: <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
 				<div>
-				<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-primary" %> <%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-primary"  %>
+					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-primary" %> <%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-primary"  %>
 				</div>
 				<!-- see views/devise/registrations/edit.html.erb for edit user view -->
+			</div>
+			<div class="container">
+				<div class="row"><br>
+					<h3><%= @user.full_name %>'s workshops</h3><br>
+					<div class="col-md-12">
+						<% @user.workshops.each do |workshop| %>
+						<div class="col-md-4">
+							<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
+						</div>
+						<div class="col-md-8 well">
+							<h2><%= workshop.title %></h2>
+							<h3>Speaker:<%= workshop.user.full_name.titleize %></h3>
+							<p><%= workshop.description %></p>
+							<!-- <a class="btn btn-primary" href="workshops/<%= workshop.id %>">BOOK</a> -->
+							<!-- above code is html code, we can use rails code for it -->
+							<div class="text-center">
+								<%= link_to "MESSAGE", workshop_path(workshop), class: "btn btn-primary" %>
+							</div>
+						</div>
+					</div>
+					<% end %>
+					
+				</div>
 			</div>
 		</div>
 	</div>
