--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -25,22 +25,22 @@
 							<button class="btn btn-danger center-block">MESSAGE</button>
 						</div>
 					</div>
-					<div class="col-md-12">
+
 						<div class="col-md-3">
 							<div id="rating-box">
 							<div class="row">
 								<div class="small-2 large-4 columns">
 									<% if current_user %>
-									Rating: <%= rating_for @workshop, "rating", disable_after_rate: false, enable_half: true, half_show: true, path: 'cancel_on'%>
+									Rate Workshop: <%= rating_for @workshop, "rating", disable_after_rate: false, enable_half: true, half_show: true, path: 'cancel_on'%>
 									<div id="hintDiv"></div
 									<% end %>
 								</div>
 							</div>
 							</div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 			<!-- this part will be replace with @workshop.user.about later >>> Trung -->
 			<!-- add user.first_name + user.last_name -->
 			<!-- add user.location  -->
