--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the sites controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+button#site-workshops-filter {
+	width: 100%;
+	text-align: left;
+	font-size: 18px;
+}
