update workshop controller with topic filter

--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -1,3 +1,14 @@
+// workshops index
+.workshop-index-speaker {
+	margin-bottom: 15px;
+	.tiny-thumb {
+		height: 50px;
+		float: left;
+		margin-right: 15px;
+	}
+}
+// end workshops index
+
 // Trung
 .gap-40px {
 	height: 40px;
