--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -7,10 +7,18 @@
 			</div>
 			<div class="col-md-8 well">
 				<h2><%= workshop.title %></h2>
-				<h3>Speaker:<%= workshop.user.full_name.titleize %></h3>
+				<h4>
+					Topic: <%= workshop.topic.name.titleize %>
+					<br>
+					Location: <%= workshop.location.titleize %>
+				</h4>
+				<div class="workshop-index-speaker clearfix">
+					<%= image_tag workshop.user.avatar.url(:thumb), class: "tiny-thumb" %>
+					<span>
+						<h4>Speaker:<%= workshop.user.full_name.titleize %></h4>
+					</span>
+				</div>
 				<p><%= workshop.description %></p>
-				<!-- <a class="btn btn-primary" href="workshops/<%= workshop.id %>">BOOK</a> -->
-				<!-- above code is html code, we can use rails code for it -->
 				<div class="text-center">
 					<%= link_to "MESSAGE", workshop_path(workshop), class: "btn btn-primary" %>
 				</div>
