--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @workshop, html: { multipart: true } do |f| %>
   <div class="field">
     <%= f.label :topic_id  %>
-    <%= f.collection_select :topic_id, Topic.all, :id, :titleize_name, {prompt: "Choose a topic"}, class: "form-control dropdown-toggle", autofocus: true %>
+    <%= f.collection_select :topic_id, Topic.all, :id, :titleize_name, {prompt: "Choose a topic"}, class: "form-control dropdown-toggle" %>
   </div>
   <div class="field">
     <%= f.label :title do %>
