--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
+	<%= render "sites/search_bar" %>	
+	<br>
 	<div class="row">
 		<div class="col-md-12">
 			<% @workshops.each do |workshop| %>
