--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@
  @import "bootswatch/cosmo/variables";
  @import "bootstrap";
  @import "bootswatch/cosmo/bootswatch";
- @import "bootstrap-select";
+ @import "bootstrap-select-1.10.0/bootstrap-select.min";
  @import "font-awesome";
  @import "sites";  // for css in sites.css
  @import "users"; // for css in users.css
