--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -1,7 +1,7 @@
 // workshops index
 .workshop-index-speaker {
 	margin-bottom: 15px;
-	.tiny-thumb {
+	.tiny-thumb img {
 		height: 50px;
 		float: left;
 		margin-right: 15px;
