--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,17 +4,35 @@
 			<div class="col-md-4">
 				<div class="avatar-wrapper text-center">
 					<%= image_tag @user.avatar.url(:medium), class: "avatar-img", style: "max-width: 300px;" %>
-					<%= link_to "MESSAGE", user_path(@user),class: "btn btn-primary" %>
 				</div>
 			</div>
 			<div class="col-md-8 well">
 				<h2><%= @user.full_name.titleize %></h2>
-				<p>Email: <%= @user.email %></p>
-				<p>Location: <%= @user.location %></p>
-				<p>Bio: <%= @user.bio %></p>
-				<p>Workshoply member since: <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
+				<h4>
+					<% if current_user %>
+						Email: <%= @user.email %><br>
+					<% end %>
+					Location: <%= @user.location.titleize %><br>
+					Member since: <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %><br>
+				</h4>
+				<h4>Bio: 
+					<% if @user.bio %>
+						<%= @user.bio %>
+					<% else %>
+						<% if current_user %>
+							Required for posting workshop.
+						<% else %>
+							User hasn't added bio yet.
+						<% end %>
+					<% end %>
+				</h4>
 				<div>
-					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-primary" %> <%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-primary"  %>
+					<% if !current_user %>
+						<a href="#" class="btn btn-primary">MESSAGE</a>
+					<% else %>
+						<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-primary" %> 
+						<%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-primary"  %>
+					<% end %>
 				</div>
 				<!-- see views/devise/registrations/edit.html.erb for edit user view -->
 			</div>
@@ -27,18 +45,21 @@
 							<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
 						</div>
 						<div class="col-md-8 well">
-							<h2><%= workshop.title %></h2>
-							<h3>Speaker:<%= workshop.user.full_name.titleize %></h3>
+							<h2><%= link_to "View", workshop_path(workshop) %></h2>
+							<h4>
+								Topic: <%= workshop.topic.name.titleize %>
+								<br>
+								Location: <%= workshop.location.titleize %>
+							</h4>
 							<p><%= workshop.description %></p>
-							<!-- <a class="btn btn-primary" href="workshops/<%= workshop.id %>">BOOK</a> -->
-							<!-- above code is html code, we can use rails code for it -->
-							<div class="text-center">
-								<%= link_to "MESSAGE", workshop_path(workshop), class: "btn btn-primary" %>
-							</div>
+							<% if !current_user %>
+								<div class="text-center">
+									<%= link_to "View", workshop_path(workshop), class: "btn btn-primary" %>
+								</div>
+							<% end %>
 						</div>
 					</div>
 					<% end %>
-					
 				</div>
 			</div>
 		</div>
