--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -1,3 +1,7 @@
+.workshop-title-link:hover, .workshop-title-link:focus, .workshop-title-link:active,
+.speaker-name-link:hover, .speaker-name-link:focus, .speaker-name-link:active {
+	text-decoration: none;
+}
 // workshops index
 .workshop-index-speaker {
 	margin-bottom: 15px;
