--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container-fluid">
 	<!-- Hero Image -->
-	<div class="jumbotron">
-		<h1>Inspire Your Team</h1>
-		<h2>Book a game-changing onsite training session for your organization</h2>
-		<a class="btn btn-primary btn-lg" id="btn-signup" href="/signup">SIGN UP</a>
-	</div><br>
+	<section id="hero-image">
+		<div class="jumbotron">
+			<h1>Inspire Your Team</h1>
+			<h2>Book a game-changing onsite training session for your organization</h2>
+			<a class="btn btn-primary btn-lg" id="btn-signup" href="/signup">SIGN UP</a>
+		</div>
+	</section>
 	<!-- End Hero -->
 	<!-- Search Bar -->
 	<%= render "search_bar" %>
