--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -1,3 +1,9 @@
+.search-section {
+	background-color: #e9e9e9;
+}
+.search-bar-form {
+  padding: 50px;
+}
 button#site-workshops-filter {
 	width: 100%;
 	text-align: left;
