--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,85 +8,81 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
   </head>
   <body>
-    <!--Nav bar -->
-    <nav class="navbar navbar-default navbar-static-top navbar-custom">
-      <div class="navbar-custom">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          </button>
-          <%= link_to image_tag("workshoply-logo-light.png", alt: "Workshoply"), '/', class: "navbar-brand navbar-logo" %>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-left">
-            <li><a href="/about">About</a></li>
-            <li><%= link_to "Workshops", workshops_path %></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if current_user %>
-            <li><%= link_to "Post a Workshop", new_workshop_path, class:"btn btn-default" %> </li>
-            <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name.titleize %> <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", user_path(current_user) %></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+    <div class="nav-and-yield">
+      <!--Nav bar -->
+      <nav class="navbar navbar-default navbar-static-top navbar-custom">
+        <div class="navbar-custom">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+            <%= link_to image_tag("workshoply-logo-light.png", alt: "Workshoply"), '/', class: "navbar-brand navbar-logo" %>
+          </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-left">
+              <li><a href="/about">About</a></li>
+              <li><%= link_to "Workshops", workshops_path %></li>
             </ul>
-          </li>
-          <% else %>
-          <li><%= link_to "Sign Up", signup_path, class: "btn btn-default" %></li>
-          <li><%= link_to "Sign In", login_path %></li>
-          <% end %>
-        </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <% if current_user %>
+              <li><%= link_to "Post a Workshop", new_workshop_path, class:"btn btn-default" %> </li>
+              <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name.titleize %> <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profile", user_path(current_user) %></li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+              </ul>
+            </li>
+            <% else %>
+            <li><%= link_to "Sign Up", signup_path, class: "btn btn-default" %></li>
+            <li><%= link_to "Sign In", login_path %></li>
+            <% end %>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!-- Devise Flash MSG -->
-  <div class="notice-error-msg">
-    <% if notice.present? %>
-    <div class="alert devise-msg <%= params[:controller] == 'plans' ? 'alert-warning animated bounceInUp' : 'alert-info' %>">
-      <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
-      <p>
-        <%= notice %>
-      </p>
-    </div>
-    <% elsif alert.present? %>
-    <div class="alert alert-danger devise-msg">
-      <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
-      <p>
-        <%= alert %>
-      </p>
-    </div>
-    <% end %>
-    <% flash.each do |name, msg| %>
-    <% if name == 'error' %>
+    </nav>
+    <!-- Devise Flash MSG -->
     <div class="notice-error-msg">
-      <div class="alert remind-msg alert-danger">
+      <% if notice.present? %>
+      <div class="alert devise-msg <%= params[:controller] == 'plans' ? 'alert-warning animated bounceInUp' : 'alert-info' %>">
         <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
         <p>
-          <%= msg %>
+          <%= notice %>
         </p>
       </div>
-    </div>
-    <% end %>
-    <% end %>
-  </div>
-  <!-- end Devise Flash MSG -->
-  <%= yield %>
-  <div class="info-container container-fluid">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <footer class="text-center">
-          <br>
-          <li class="footer-nav"><%= link_to "About Workshoply", about_path %></li>
-          <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
-          <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
-          <br>
-        </footer>
+      <% elsif alert.present? %>
+      <div class="alert alert-danger devise-msg">
+        <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
+        <p>
+          <%= alert %>
+        </p>
       </div>
+      <% end %>
+      <% flash.each do |name, msg| %>
+      <% if name == 'error' %>
+      <div class="notice-error-msg">
+        <div class="alert remind-msg alert-danger">
+          <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
+          <p>
+            <%= msg %>
+          </p>
+        </div>
+      </div>
+      <% end %>
+      <% end %>
     </div>
+    <!-- end Devise Flash MSG -->
+
+    <%= yield %>
   </div>
+
+  <footer class="text-center">
+    <li class="footer-nav"><%= link_to "About Workshoply", about_path %></li>
+    <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
+    <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
+  </footer>
   <!-- rails js files -->
   <%= javascript_include_tag 'application' %>
   <!-- geocomplete -->
