--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,12 +7,20 @@
 		</div>
 		<div class="col-md-8">
 			<h2><%= @user.full_name.titleize %></h2>
-			<p>
-				<% if current_user %>
-					Email: <%= @user.email %><br>
-				<% end %>
+			<h4>
 				Location: <%= @user.location.titleize %><br>
 				Member since: <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %><br>
+			</h4>
+			<p>Organization:
+				<% if @user.organization %>
+					<%= @user.organization %>
+				<% else %>
+					<% if current_user %>
+					Required for posting a workshop
+					<% else %>
+					User hasn't submitted an organization
+					<% end %>
+				<% end %>
 			</p>
 			<p>Bio: 
 				<% if @user.bio %>
@@ -26,11 +34,11 @@
 				<% end %>
 			</p>
 			<div>
-				<% if !current_user %>
+				<% if !current_user or current_user != @user %>
 					<a href="#" class="btn btn-primary">MESSAGE</a>
 				<% else %>
-					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-primary" %> 
-					<%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-primary"  %>
+					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-default" %> 
+					<%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-default"  %>
 				<% end %>
 			</div>
 			<!-- see views/devise/registrations/edit.html.erb for edit user view -->
@@ -43,33 +51,6 @@
 				<div class="col-md-4">
 					<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
 				</div>
-
-			</div>
-
-			<div>
-				<h1>Test mail div</h1>
-				<%= render current_user.mailbox.inbox %>
-			</div>
-
-			<div class="col-md-8 well">
-				<h2><%= @user.full_name.titleize %></h2>
-				<p>Email: <%= @user.email %></p>
-				<p>Location: <%= @user.location %></p>
-				<p>Bio: <%= @user.bio %></p>
-				<p>Workshoply member since: <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
-				<div>
-					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-primary" %> <%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-primary"  %>
-				</div>
-				<!-- see views/devise/registrations/edit.html.erb for edit user view -->
-			</div>
-			<div class="container">
-				<div class="row"><br>
-					<h3><%= @user.full_name %>'s workshops</h3><br>
-					<div class="col-md-12">
-						<% @user.workshops.each do |workshop| %>
-						<div class="col-md-4">
-							<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
-
 				<div class="col-md-8 well">
 					<h2><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></h2>
 					<h4>
@@ -78,10 +59,9 @@
 						Location: <%= workshop.location.titleize %>
 					</h4>
 					<p><%= workshop.description %></p>
-					<% if !current_user %>
+					<% if !current_user or current_user != @user %>
 						<div class="text-center">
 							<%= link_to "View", workshop_path(workshop), class: "btn btn-primary" %>
-
 						</div>
 					<% end %>
 				</div>
@@ -89,4 +69,3 @@
 		</div>
 	</div>
 </div>
-<% end %>
