--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0″ >
-    <title>Workshoply</title>
+    <title>Big Talker</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
@@ -19,16 +19,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <%= link_to image_tag("workshoply-logo-light.png", alt: "Workshoply"), '/', class: "navbar-brand navbar-logo" %>
+            <%= link_to image_tag("big-talker-logo-bold2.png", alt: "Big Talker"), '/', class: "navbar-brand navbar-logo" %>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-left">
               <li><a href="/about">About</a></li>
-              <li><%= link_to "Workshops", workshops_path %></li>
+              <li><%= link_to "Talks", workshops_path %></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <% if current_user %>
-              <li><%= link_to "Post a Workshop", new_workshop_path, class:"btn btn-default" %> </li>
+              <li><%= link_to "Post a Talk", new_workshop_path, class:"btn btn-default" %> </li>
               <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name.titleize %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", user_path(current_user) %></li>
@@ -79,7 +79,7 @@
   </div>
 
   <footer class="text-center">
-    <li class="footer-nav"><%= link_to "About Workshoply", about_path %></li>
+    <li class="footer-nav"><%= link_to "About Big Talker", about_path %></li>
     <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
     <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
   </footer>
