--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -6,11 +6,11 @@
 	<body>
 		<div class="col-md-6 col-md-offset-3 well">
 			<div>
-				<h1 class="text-center">About Workshoply</h1>
+				<h1 class="text-center">About Big Talker</h1>
 				<br>
-				<p>Workshoply is a trusted marketplace for onsite workshops.   Find your team's next inspiring workshop or fantastic team building exercise.   Check community generated reviews and ratings to find the next life-changing workshop for your team.</p>
+				<p>Big Talker is a trusted marketplace for onsite workshops.   Find your team's next inspiring guest speaker or fantastic team building exercise.   Check community generated reviews and ratings to find the next life-changing talk for your team.</p>
 				<p>Contact us at <a href="mailto:workshoply@gmail.com?Subject=Hello" target="_top">workshoply@gmail.com</a></p>
-				<p>Workshoply is currently in Beta.  Our Beta program focuses on soft-skill /leadership workshops in San Francisco only.</p>
+				<p>Big Talker is currently in Beta.  Our Beta program focuses on soft-skill /leadership talks in San Francisco only.</p>
 			</div>
 			<div class="text-center">
 				<img src="http://geekadelphia.com/wp-content/uploads/2012/11/gen-assembly.jpg" class="img-responsive" alt="workshop photo">
