--- a/app/views/workshops/edit.html.erb
+++ b/app/views/workshops/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-      <h2>Edit Workshop</h2>
+      <h2>Edit Talk</h2>
       <div class="img-wrapper text-center">
           <%= image_tag @workshop.image.url(:medium), class: "workshop-img img-responsive" %>
           <br>
