--- a/app/views/workshops/new.html.erb
+++ b/app/views/workshops/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-      <h2>Post a Workshop</h2>
+      <h2>Post a Talk</h2>
       <%= render "workshop_form" %>
     </div>
   </div>
