--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -21,7 +21,7 @@
 				<img src="https://hd.unsplash.com/1/bag-and-hands.jpg" alt="...">
 				<h1>Leadership 101</h1>
 				<div class="caption">
-					<h3>Workshop 1 Caption</h3>
+					<h3>Talk 1 Caption</h3>
 					<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
 					<!-- Modal Button -->
 					<button type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#workshopModal1">Learn more</button>
@@ -51,7 +51,7 @@
 				<img src="https://s3.amazonaws.com/StartupStockPhotos/uploads/20160503/6.jpg" alt="...">
 				<h1>Unconscious Bias</h1>
 				<div class="caption">
-					<h3>Workshop 2 Caption</h3>
+					<h3>Talk 2 Caption</h3>
 					<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut. </p>
 					<!-- Modal Button -->
 					<button type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#workshopModal2">Learn more</button>
@@ -81,7 +81,7 @@
 				<img src="https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/83.jpg" alt="...">
 				<h1>Team Building</h1>
 				<div class="caption">
-					<h3>Workshop 3 Caption</h3>
+					<h3>Talk 3 Caption</h3>
 					<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
 					<!-- Modal Button -->
 					<button type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#workshopModal3">Learn more</button>
