--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -15,6 +15,19 @@
 <!-- End Search Bar -->
 
 <!-- 9/2 -->
+
+<div class="workshop-container">
+	<div class="row">
+		<div class="col-sm-12 col-md-4 col-lg-4">
+				<div class="thumbnail">
+					<%= @workshop[1].name %>
+					</div>
+					</div>
+					</div>
+					</div>
+
+
+
 <div class="workshop-container">
 <% @workshops.each do |workshop| %>
 	<div class="row">
